--- a/metal/pyproject.toml
+++ b/metal/pyproject.toml
@@ -12,3 +12,10 @@ dependencies = [
     "werkzeug",
     "requests",
 ]
+
+[build-system]
+requires = ["setuptools", "wheel"]
+build-backend = "setuptools.build_meta"
+
+[tool.setuptools]
+packages = ["metal"]
