--- a/metal/pyproject.toml
+++ b/metal/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "python-dotenv",
     "openai",
     "flask",
+    "flask-cors",
     "flask-jwt-extended",
     "werkzeug",
     "requests",
