WIP moving backend to use firebase firestore for database and move auth to frontend.

--- a/metal/pyproject.toml
+++ b/metal/pyproject.toml
@@ -9,9 +9,9 @@ dependencies = [
     "openai",
     "flask",
     "flask-cors",
-    "flask-jwt-extended",
     "werkzeug",
     "requests",
+    "firebase-admin"
 ]
 
 [build-system]
